# obd-realtime-platform

./: .env.example  .gitignore  README.md  Taskfile.yml  go.work  go.work.sum  package.json  pnpm-lock.yaml
backend/: README.md  go.mod  go.sum  main.go
docs/: architecture.md
edge-python/: README.md  pyproject.toml
edge-python/obd_edge/: __init__.py  advanced_obd.py  advanced_profiles.py  cli.py  lilygo_bus.py  mqtt_publisher.py  obd2.py
firmware/lilygo-tcan485/: platformio.ini
firmware/lilygo-tcan485/src/: can_driver.cpp  can_driver.h  config.h  main.cpp  serial_protocol.cpp  serial_protocol.h
frontend/: index.html  package.json  tsconfig.json
frontend/src/: main.tsx  styles.css
infra/: docker-compose.yml
infra/grafana/provisioning/dashboards/: dashboards.yml  obd-live.json
infra/prometheus/: prometheus.yml
simulator/: README.md  go.mod  main.go
